# GestureGlove

./: .geminiignore  .gitignore  LICENSE  README.md  presentation.md  pyproject.toml  setup_windows_env.ipynb  test_model.weights.h5
.env/: dependencies.md
.setup/: setup_linux_env.ipynb  setup_mac_env.ipynb
code/: analyze_motion_energy.ipynb  device_resolution.py  input_data.py  read_imu.ino  record_data.py  sync.py
config/: devices.example.yml  powerpoint_control.yml
data_analysis/: data_quality_audit_results.json  dataset_analysis.ipynb
datasets/: gesture_record_1782043388.csv
diagnostics/: data_quality_audit.ipynb  data_quality_audit_executed.ipynb
documentation/: asynchronous_data_grabber.md  asynchronous_real-time_inference.md  codeguidelines.md  data_fusion_project_core.md  data_processing_pipeline.md  data_recording_pipeline.md  early_fusion_single_branch_1d_cnn.md  feature_engineering_notes.md  inference_and_verification_design_plan.md  jan_notes.md  jan_private_notes.md  late_fusion_multi_branch_1d_cnn.md  model_training.md  model_training_pipeline.md  model_training_strategies.md  models.md  pipeline_configuration.md  powerpoint_control_interface.md  real_time_inference_pipeline.md  slef_attention_temporal_transformer.md
reports/: live_evaluation.json
requirements/: requirements_data_fusion_env_1-jan-macbook.txt
scripts/: analyze_calibration_data.ipynb  analyze_motion_energy.ipynb  analyze_recording_quality.ipynb  build_dataset.py  build_dataset_version.py  check_samples.py  record_data.py  run_realtime_inference.py  test_powerpoint_control.py  (+6 more)
(+3109 files in other folders)
