[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_fusion_project"
version = "0.1.0"
description = "A module encapsulating central functions like path resolution for the DataFusionProject."
requires-python = ">=3.8"
dependencies = [
    "pyserial",
    "pyyaml",
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm"
]

[project.optional-dependencies]
# PowerPoint control interface: sends real keyboard shortcuts to the active window.
# Install with:  pip install -e .[control]
control = [
    "pyautogui"
]

[tool.setuptools.packages.find]
where = ["src"]
